--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ edition = "2018"
 num = "0.1.27"
 image = "0.13.0"
 crossbeam = "0.2.8"
+
+# [build.release]
+# # リリースビルドでデバッグシンボルを有効にしたい時に指定
+# debug = true
