--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 num = "0.1.27"
 image = "0.13.0"
 crossbeam = "0.4.1"
+crossbeam-utils = "0.8.7"
 
 # [build.release]
 # # リリースビルドでデバッグシンボルを有効にしたい時に指定
