--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ image = "0.13.0"
 crossbeam = "0.4.1"
 crossbeam-utils = "0.8.7"
 crossbeam-channel = "0.4.4"
+memoffset = "0.5.0"
 
 # [build.release]
 # # リリースビルドでデバッグシンボルを有効にしたい時に指定
