--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ crossbeam = "0.4.1"
 crossbeam-utils = "0.8.7"
 crossbeam-channel = "0.4.4"
 memoffset = "0.5.0"
+lock_api = "0.4.2"
 
 # [build.release]
 # # リリースビルドでデバッグシンボルを有効にしたい時に指定
