--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crossbeam-utils = "0.8.7"
 crossbeam-channel = "0.4.4"
 memoffset = "0.5.0"
 lock_api = "0.4.2"
+smallvec = "1.6.1"
 
 # [build.release]
 # # リリースビルドでデバッグシンボルを有効にしたい時に指定
